[package]
name = "print-request-response"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.10"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tower = { "version" = "0.4.12", features = ["util", "filter"] }
hyper = { "version" = "0.14.18", features = ["full"] }
