[package]
edition = "2021"
name = "query-params-with-empty-strings"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
hyper = "0.14.19"
serde = {version = "1.0.137", features = ["derive"]}
tokio = {version = "1.18.2", features = ["full"]}
tower = {version = "0.4.12", features = ["util"]}
